--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </section>
     <footer>
         <div id="copyright">
-            &copy; <em id="date"></em>ByooSMP2024
+            &copy; <em id="date"></em>2024 ByooSMP
         </div>
         <div id="kontak-admin">
             <p>Email :  afrds290@gmail.com</p>
