--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
         <div id="laman-pilihan-tombol">
             <div>
                 <a class="tombol" href="https://chat.whatsapp.com/DyjRgwd18K3EheDJJE7bqI" target="_blank">Group</a>
+            </div>
+            <div>
                 <a class="tombol tombol-kanan" href="" target="_blank">Gambar</a>
             </div>
         </div>
