--- a/index.html
+++ b/index.html
@@ -20,21 +20,21 @@
     </header>
     <section id="tentang-kami">
         <div class="tentang-kami-huruf">
-                <h1>Selamat Datang di ByooSMP</h1>
-                <p>Sejak 2021 berdiri, kami menjadi tim dan grup Minecraft sejati</p>
+                <h1>Welcome to ByooSMP</h1>
+                <p>Since 2021, we have established as a long-term Minecraft community</p>
         </div>
     </section>
     <section id="laman-pilihan">
         <div>
-            <h1>Temukan Duniamu</h1>
-            <p>Di Byoo, petualangan tidak pernah sendirian</p>
+            <h1>Find your place</h1>
+            <p>In Byoo, adventures won't happen alone</p>
         </div>
         <div id="laman-pilihan-tombol">
             <div>
                 <a class="tombol" href="https://chat.whatsapp.com/DyjRgwd18K3EheDJJE7bqI" target="_blank">Group</a>
             </div>
             <div>
-                <a class="tombol tombol-kanan" href="" target="_blank">Gambar</a>
+                <a class="tombol tombol-kanan" href="" target="_blank">Pictures</a>
             </div>
         </div>
     </section>
@@ -63,19 +63,19 @@
     </section> -->
     <section id="penutup">
         <div class="penutup-konten">
-          <h1>Join Bersama Kami</h1>
+          <h1>Our Players</h1>
           <ul class="penutup-list">
-            <li>Bruhh4133</li>
-            <li>Aryakun1662</li>
-            <li>Nazzu5787</li>
-            <li>SilverAsh0505</li>
-            <li>Bandraf94</li>
-            <li>Ryou Kaitou1290</li>
-            <li>Xzylas1</li>
-            <li>Shinnkyujinn</li>
-            <li>Zee1605</li>
-            <li>Chlorocloud</li>
-            <li>Rayyy6443</li>
+           <span class="penutup-list-item"> <li>Bruhh4133</li> </span>
+           <span class="penutup-list-item"><li>Aryakun1662</li></span> 
+           <span class="penutup-list-item"><li>Nazzu5787</li></span>
+           <span class="penutup-list-item"><li>SilverAsh0505</li></span>
+           <span class="penutup-list-item"><li>Bandraf94</li></span>
+           <span class="penutup-list-item"><li>Ryou Kaitou1290</li></span>
+           <span class="penutup-list-item"><li>Xzylas1</li></span>
+           <span class="penutup-list-item"><li>Shinnkyujinn</li></span>
+           <span class="penutup-list-item"><li>Zee1605</li></span>
+           <span class="penutup-list-item"><li>Chlorocloud</li></span>
+           <span class="penutup-list-item"><li>Rayyy6443</li></span>
           </ul>
         </div>
       </section>
