--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <header id="header">
         <h1>ByooSMP</h1>
         <nav>
-            <a href="" target="_blank">About</a>
-            <a href="https://wa.me/6281254932611" target="_blank">Contact</a>
-            <a href="https://drive.google.com/drive/folders/1kDyXGPAEBCPoQa7p4ZurmzVHyHizIORQ?usp=drive_link" target="_blank">Docs</a>
+            <a href="#penutup">About</a>
+            <a href="#kontak-admin">Contact</a>
+            <a href="#laman-pilihan">Help</a>
         </nav>
     </header>
     <section id="tentang-kami">
@@ -34,7 +34,7 @@
                 <a class="tombol" href="https://chat.whatsapp.com/DyjRgwd18K3EheDJJE7bqI" target="_blank">Group</a>
             </div>
             <div>
-                <a class="tombol tombol-kanan" href="" target="_blank">Pictures</a>
+                <a class="tombol tombol-kanan" href="about.html">About</a>
             </div>
         </div>
     </section>
@@ -64,7 +64,7 @@
     <section id="penutup">
         <div class="penutup-konten">
           <h1>Our Players</h1>
-          <ul class="penutup-list">
+          <!-- <ul class="penutup-list">
            <span class="penutup-list-item"> <li>Bruhh4133</li> </span>
            <span class="penutup-list-item"><li>Aryakun1662</li></span> 
            <span class="penutup-list-item"><li>Nazzu5787</li></span>
@@ -76,16 +76,34 @@
            <span class="penutup-list-item"><li>Zee1605</li></span>
            <span class="penutup-list-item"><li>Chlorocloud</li></span>
            <span class="penutup-list-item"><li>Rayyy6443</li></span>
+          </ul> -->
+          <ul class="penutup-list">
+            <li class="penutup-list-item" data-text="Daus">Bruhh4133</li>
+            <li class="penutup-list-item" data-text="Arya">Aryakun1662</li>
+            <li class="penutup-list-item" data-text="Fathur">Nazzu5787</li>
+            <li class="penutup-list-item" data-text="Rafa">SilverAsh0505</li>
+            <li class="penutup-list-item" data-text="Ziad">Bandraf94</li>
+            <li class="penutup-list-item" data-text="Ferdinanto">Ryou Kaitou1290</li>
+            <li class="penutup-list-item" data-text="Nanda">Xzylas1</li>
+            <li class="penutup-list-item" data-text="Nazhir">Shinnkyujinn</li>
+            <li class="penutup-list-item" data-text="Azky">Zee1605</li>
+            <li class="penutup-list-item" data-text="Rizki">Chlorocloud</li>
+            <li class="penutup-list-item" data-text="Ryan">Rayyy6443</li>
           </ul>
         </div>
       </section>
     <footer>
         <div id="copyright">
-            &copy; <em id="date"></em>2024 ByooSMP
+            &copy; <em id="date">2024</em> ByooSMP
         </div>
         <div id="kontak-admin">
-            <p>Email :  afrds290@gmail.com</p>
-            <p>Phone :  +6281254932611</p>
+                <ul>
+                    <li>Email: afrds290@gmail.com</li>
+                    <li>Phone:&#160;<a href="https://api.whatsapp.com/send/?phone=6281254932611&text&type=phone_number&app_absent=0" target="_blank"> (+62) 81254932611</a></li>
+        
+                    <li> <br>~ ~ Leader, Webdev: Bruhh4133</li>
+                    <li>Co-leader: Aryakun1662, Nazzu5787 ~ ~</li>
+                </ul>
         </div>
     </footer>
 </body>
